--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/images/Logo/subLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>앱앤미 지원 사이트</title>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +25,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
